manifests/overlays/prod/deployment.yaml
apiVersion : v1
kind: Deployment
metadata:
  name: 82161846 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 82161846  # 추가된 부분
  template:
    metadata:
      labels:
        app: 82161846  # 추가된 부분
    spec:
      containers:
        - name: 82161846 
          command: ["java","-jar","/app.jar"]
          args: ["--spring.config.location=file:/config/application.yml"]
          volumeMounts:
          - mountPath: /mnt/cloud-sample
            name: 82161846-volume
            readOnly: false
            subPath: cloud-sample
          - mountPath: /config
            name: application-properties
            readOnly: true
                          
      volumes:
      - name: 82161846-volume
        persistentVolumeClaim:
          claimName: cepg-aa-std-pvc
      - name: application-properties
        configMap:
          name: 82161846-configmap
          items:
            - key: application.yml
              path: application.yml
          defaultMode: 420
