manifests/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-82161846
spec:
  selector:
    app: 82161846
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
